--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,11 +10,9 @@ img {
   height: auto;
 }
 
-ul {
-  list-style: none;
-}
-
 body {
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
   margin: 0;
 }
 
@@ -62,12 +60,9 @@ form button {
   fill: currentColor;
 }
 
-.container {
+.gallery {
   padding-left: 20px;
   padding-right: 20px;
-}
-
-.gallery {
   display: flex;
   flex-wrap: wrap;
   column-gap: 20px;
@@ -75,12 +70,37 @@ form button {
   margin-bottom: 20px;
 }
 
-.item {
+.photo-card {
   width: calc((100% - 60px) / 4);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .item-thumb {
   width: 100%;
   height: 230px;
   object-fit: cover;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+a {
+  display: block;
+  text-decoration: none;
+  color: #000000;
+}
+
+b {
+  margin-bottom: 5px;
 }
