--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,6 +72,7 @@ form button {
 
 .photo-card {
   width: calc((100% - 60px) / 4);
+  height: 295px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -81,6 +82,12 @@ form button {
   width: 100%;
   height: 230px;
   object-fit: cover;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-thumb:hover {
+  cursor: zoom-in;
+  transform: scale(1.03);
 }
 
 .info {
