--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -76,19 +76,25 @@ form button {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.photo-card:hover {
+    cursor: zoom-in;
+    transform: scale(1.03);
 }
 
 .item-thumb {
   width: 100%;
   height: 230px;
   object-fit: cover;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.item-thumb:hover {
+/* .item-thumb:hover {
   cursor: zoom-in;
   transform: scale(1.03);
-}
+} */
 
 .info {
   display: flex;
